Terminamos la pagina con responsive en tamaño md de bootstrap

--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -1,5 +1,7 @@
 footer
     .contact
+        width: 60%
+        margin: auto
         h4
             color: $morado_primario
             font-weight: 600
@@ -32,10 +34,17 @@ footer
                 width: 100px
                 padding: 5px
                 font-size: 1.4rem
+                color: #fff
+                border: none
+                background: $morado_primario
+                border-radius: 100px
                 margin-bottom: 5rem
         textarea
+            width: 80%
             height: 30%
-            max-height: 150px
+            display: block
+            margin: auto
+            max-height: 100px
             min-height: 50px
             font-size: 1.4rem
             padding: 10px
