--- a/css/_header.sass
+++ b/css/_header.sass
@@ -33,9 +33,7 @@ header
         .activo
             border-bottom: 3px solid $morado_primario
             color: $morado_primario
-    
     .texto-principal
-        margin-top: 6rem
         text-align: center
         color: #fff
         h1
@@ -45,14 +43,13 @@ header
         p
             font-size: 1.4rem
             margin-top: 2rem
-    .botones
-        text-align: center
         button
             width: 120px
             font-size: 1.4rem
             border: none
             background: $morado_primario
             margin-top: 2rem
+            margin-bottom: 2rem
             padding: 5px
             border-radius: 5px
         .btn-about-me
@@ -64,17 +61,16 @@ header
             border: 2px solid $morado_primario
         i
             margin-left: 5px
+    .imagen
+        text-align: center
     .foto-perfil
         margin-top: 4rem
         text-align: center
         img
             width: 100%
-            border-radius: 100px
+            border-radius: 100%
         .circulo
             width: 200px
             border-radius: 100%
             margin: auto
             background: $morado_primario
-
-
-
