--- a/css/_main.sass
+++ b/css/_main.sass
@@ -1,5 +1,4 @@
 main
-    width: 100%
 .about-me
     h3
         color: $morado_primario
@@ -9,29 +8,27 @@ main
         color: #fff
         font-size: 1.4rem
         margin-bottom: 2rem
-
     h5
         color: $morado_primario
         font-weight: 600
         font-size: 2.8rem
         margin-bottom: 2.5rem
-    .service
-        width: 50%
-        margin: auto
-        text-align: center
-        color: #fff
-        padding: 20px
-        border: 3px solid #fff
-        cursor: pointer
-        &:hover
-            border: 3px solid $morado_primario
-        border-radius: 16px
-        margin-bottom: 2rem
-        i
-            font-size: 3rem
-            margin-bottom: 1.5rem
-        h6
-            font-size:  2rem
+    .services
+        width: 100%
+        .service
+            color: #fff
+            padding: 20px
+            border: 3px solid #fff
+            cursor: pointer
+            &:hover
+                border: 3px solid $morado_primario
+            border-radius: 16px
+            margin-bottom: 2rem
+            i
+                font-size: 3rem
+                margin-bottom: 1.5rem
+            h6
+                font-size:  2rem
 .projects
     color: #fff
     h3
@@ -48,7 +45,7 @@ main
             background: #31313f
             border-radius: 8px
             margin-bottom: 2rem
-            .project-box
+            .img-box
                 width: 100%
                 margin: auto
                 img
@@ -62,25 +59,20 @@ main
             p
                 font-size: 1.4rem
                 padding: 0 30px
-            button
-                padding: 15px
-                border: none
-                background: $morado_primario
-                border-radius: 10px
-                margin-bottom: 2rem
+            a
                 margin-left: 3rem
-                a
-                    text-decoration: none
+                button
+                    width: 150px
+                    padding: 15px
+                    border: none
+                    background: $morado_primario
+                    border-radius: 10px
+                    margin-top: 1.4rem
+                    margin-bottom: 2rem
                     font-size: 1.4rem
                     color: #fff
-// MEDIAQUERIES
-@media (min-width: 768px)
-    main
-        .projects
-            .project
-                width: 40%
-                margin-left: 5rem
-                .project-box
-                    width: 100%
+                :hover
+                    background: #f5f5f581
+
 
 
