Portafolio terminado, aun falta agregar y corregir informacion

--- a/css/_footer.sass
+++ b/css/_footer.sass
@@ -53,7 +53,7 @@ footer
                 border: none
                 background: $morado_primario
                 border-radius: 100px
-                margin-bottom: 1rem
+                margin-bottom: 1.5rem
         textarea
             width: 80%
             height: 30%
@@ -69,10 +69,9 @@ footer
             color: #f5f5f5
             margin-bottom: 1.5rem
     .copy
-        background: $morado_secundario
+        background: $header
         text-align: center
         h3
-            padding: 15px
             color: #f5f5f5
             .autor
                 font-size: 1.4rem
@@ -82,15 +81,21 @@ footer
             color: #f5f5f5
         i
             font-size: 2.8rem
+            margin-top: 3rem
+            display: inline-block
+            padding: 15px
+            border-radius: 100%
             margin-right: 3rem
             margin-bottom: 2rem
-        :hover.facebook
-            color: #1877f2
-        :hover.instagram
-            color: #405de6
-        :hover.whatsapp
-            color: #075e54
-        :hover.linkedin
-            color: #0077b5
+        :hover
+            opacity: .9
+        .facebook
+            background: #1877f2
+        .instagram
+            background: #5851db
+        .whatsapp
+            background: #25d366
+        .linkedin
+            background: #0077b5
         
 
