--- a/css/estilos.sass
+++ b/css/estilos.sass
@@ -1,11 +1,10 @@
 // VARIABLES PARA LOS COLORES
-$fondo: #1a1a29
+$fondo: #050505
 $claro: #f5f5f5
-$header: #181824
+$header: #000
 $baja_prioridad: #848191
-$morado_primario: #7562e0
-$morado_secundario: #282162
-$oscuro: #000036
+$morado_primario: #0076A9
+$morado_secundario: #104d68
 
 $font-family: "Poppins", sans-serif
 
