--- a/css/_main.sass
+++ b/css/_main.sass
@@ -1,5 +1,6 @@
 main
 .about-me
+    margin-bottom: 10rem
     h3
         color: $morado_primario
         font-weight: 600
@@ -30,6 +31,7 @@ main
             h6
                 font-size:  2rem
 .projects
+    margin-bottom: 5rem
     color: #fff
     h3
         margin-bottom: 2.3rem
@@ -42,7 +44,7 @@ main
     .project
             width: 100%
             text-align: center
-            background: #31313f
+            background: #3534344b
             border-radius: 8px
             margin-bottom: 2rem
             .img-box
@@ -72,7 +74,7 @@ main
                     font-size: 1.4rem
                     color: #fff
                 :hover
-                    background: #f5f5f581
+                    background: #000
 
 
 
