--- a/css/_main.sass
+++ b/css/_main.sass
@@ -52,7 +52,8 @@ main
                 margin: auto
                 img
                     padding: 20px
-                    width: 75%
+                    width: 80%
+                    height: 300px
                     border-radius: 38px
             h3
                 font-weight: 600
