--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.logo {
+  opacity: 1;
+}
+
+.logo:hover {opacity: .7;}
 
 .logo {
   max-width: 20%;
