--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,31 +1,33 @@
 .header {
-width: 100%;
-max-width: 1920px;
-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-transition: background-color 0.3s ease-in-out;
-background-color: inherit;
-backdrop-filter: blur(5px);
-z-index: 1000;
-margin: auto;
-position: sticky;
-padding-bottom: 10px;
-top: 0;
+  width: 100%;
+  max-width: 1920px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out;
+  background-color: inherit;
+  backdrop-filter: blur(5px);
+  z-index: 1000;
+  margin: auto;
+  position: sticky;
+  padding-bottom: 10px;
+  top: 0;
 }
 
 .header__container {
-width: 100%;
-display: flex;
-align-items: center;
-justify-content: space-around;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .header__logo {
-margin-top: .5rem;
-max-width: 2.6rem;
+  margin-top: 0.5rem;
+  max-width: 2.6rem;
 }
 
 .header__text {
-font-size: 1.8em;
-font-weight: 700;
-text-wrap: pretty;
+  font-size: 1.8em;
+  font-weight: 700;
+  text-wrap: pretty;
+  font-family: Aldrich;
+  font-weight: 800;
 }
