--- a/src/css/HeaderMenuDropdownTranslate.css
+++ b/src/css/HeaderMenuDropdownTranslate.css
@@ -1,64 +1,75 @@
 :root {
-    --bg-color-dark: #110a0a;
-    --text-color-light: #202020;
-    --text-color-dark: #e9e9e9;
+  --bg-color-dark: #110a0a;
+  --text-color-light: #202020;
+  --text-color-dark: #e9e9e9;
 }
 
 .header__nav {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+  text-align: center;
 }
 
 body.light-mode .header__nav__dropdown__menu {
-    background: linear-gradient(90deg, rgb(219, 226, 233) 0%,  rgb(230, 225, 225) 100%);
-    color: var(--text-color-light)
+  background: linear-gradient(
+    180deg,
+    rgb(219, 218, 218) 0%,
+    rgb(178, 184, 190) 100%
+  );
+  color: var(--text-color-light);
+  font-family: Aldrich;
+  font-weight: 700;
 }
 
 body.dark-mode .header__nav__dropdown__menu {
-    background-color: #2e2e2e; 
-    color: #e9e9e9; 
+  background: linear-gradient(90deg, rgb(29, 40, 51) 0%, rgb(64, 63, 80) 100%);
+  font-family: Aldrich;
+  font-weight: 700;
+  padding: 25%;
+  color: #e9e9e9;
 }
 
 .header__nav__link {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .header__nav__link:hover {
-    color: #a00003;
+  color: #a00003;
 }
 
 .header__nav__dropdown__menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    margin-right: 1.5rem;
-    background-color: #3d3d3d;
-    border-radius: 5px 5px 10px 10px;
-    margin-top: 1rem;
-    white-space: nowrap;
+  display: none;
+  position: absolute;
+  top: 100%;
+  margin-right: 1.5rem;
+  background-color: #3d3d3d;
+  border-radius: 5px 5px 10px 10px;
+  margin-top: 1rem;
+  white-space: nowrap;
 }
 
 .header__nav__dropdown__menu.open {
-    display: block;
+  display: block;
 }
 
 .header__nav__item {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.language-link:hover {color: #7a7a7a}
+.language-link:hover {
+  color: #7a7a7a;
+}
 
 .flag-img {
-    width: 100%;
-    max-width: 2.8rem;
-    margin: auto;
+  width: 100%;
+  max-width: 2.8rem;
+  margin: 5px auto;
 }
